--- a/yaml/07_deployment-color-app-latest.yaml
+++ b/yaml/07_deployment-color-app-latest.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: webapp-color
-        image: kodekloud/webapp-color
+        image: detteiu/karbon-training02:v2
         ports:
         - containerPort: 8080
         envFrom:
