fix container repo ddddd:q!

--- a/yaml/07_deployment-color-app-latest.yaml
+++ b/yaml/07_deployment-color-app-latest.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         run: webapp-color
+        #annotations: 
+        #comment: reload
     spec:
       containers:
       - name: webapp-color
