--- a/yaml/01_deployment-sample-app.yaml
+++ b/yaml/01_deployment-sample-app.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: guestbook-local
-        image: detteiu/karbon-training01
+        image: detteiu/karbon-training01:v1
         ports:
         - containerPort: 3000
