--- a/yaml/03_scaleup-sample-app.yaml
+++ b/yaml/03_scaleup-sample-app.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: guest-local
+  name: guestbook-local
 spec:
   replicas: 4
   selector:
     matchLabels:
-      run: guest-local
+      run: guestbook-local
   template:
     metadata:
       labels:
-        run: nginx
+        run: guestbook-local
     spec:
       containers:
-      - name: guest-local
+      - name: guestbook-local
         image: detteiu/karbon-training01:v1
         ports:
         - containerPort: 3000
