--- a/yaml/05_verup-color-app.yaml
+++ b/yaml/05_verup-color-app.yaml
@@ -6,6 +6,10 @@ spec:
   selector:
     matchLabels:
       run: webapp-color
+      #  strategy:
+      #    rollingUpdate:
+      #      maxSurge: 1
+      #      maxUnavailable: 0
   replicas: 8
   template:
     metadata:
