--- a/yaml/12_daemonset.yaml
+++ b/yaml/12_daemonset.yaml
@@ -13,6 +13,6 @@ spec:
     spec:
       containers:
         - name: sample-daemonset
-          image: detteiu/karbon-training01
+          image: detteiu/karbon-training01:v1
           ports:
             - containerPort: 3000
