--- a/yaml/02_service-nodeport-sample-app.yaml
+++ b/yaml/02_service-nodeport-sample-app.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: guestbook-local-service
+  name: gb-svc
 spec:
   type: NodePort
   ports:
-  - port: 80
+  - port: 8888
     protocol: TCP
     targetPort: 3000
   selector:
