--- a/yaml/04_deployment-color-app.yaml
+++ b/yaml/04_deployment-color-app.yaml
@@ -10,7 +10,7 @@ spec:
       #    rollingUpdate:
       #      maxSurge: 1
       #      maxUnavailable: 0
-  replicas: 8
+  replicas: 4
   template:
     metadata:
       labels:
@@ -29,7 +29,8 @@ kind: Service
 metadata:
   name: webapp-color-service
 spec:
-  type: NodePort
+        #  type: NodePort
+  type: ClusterIP
   ports:
   - port: 8080
     protocol: TCP
